# scion

./: .bazelrc  .gitignore  BUILD.bazel  build.sh  createPkts.sh  fabrid.yml  setup_tc_demo.sh  startEvaluation.sh
acceptance/router_benchmark/conf/: topology.json
antlr/: BUILD.bazel  PathPolicyConstraints.g4  Sequence.g4  generate.sh
antlr/pathpolicyconstraints/: BUILD.bazel  pathpolicyconstraints_base_listener.go  pathpolicyconstraints_lexer.go  pathpolicyconstraints_listener.go  pathpolicyconstraints_parser.go
antlr/sequence/: sequence_base_listener.go  sequence_lexer.go  sequence_listener.go  sequence_parser.go
control/: BUILD.bazel  tasks.go
control/beaconing/: BUILD.bazel  extender.go  staticinfo_config.go  staticinfo_config_test.go
control/beaconing/grpc/: creation_server.go
control/cmd/control/: BUILD.bazel  main.go
control/config/: BUILD.bazel  config.go  fabrid.go  fabrid_test.go  sample.go
control/drkey/grpc/: drkey_service.go
control/fabrid/: BUILD.bazel  fabrid_manager.go  fabrid_manager_test.go  mpls.go  mpls_map.go  mpls_map_test.go
control/fabrid/grpc/: BUILD.bazel  fabrid_service.go  fabrid_service_test.go  fetcher.go  fetcher_test.go
control/fabrid/grpc/mock_grpc/: BUILD.bazel  mock.go
control/fabrid/testdata/correct/: 1-global_example.yml  2-global_example.yml  3-local_example.yml  55-local_example.yml
control/fabrid/testdata/mixed/: invalid.yml
control/mgmtapi/testdata/: TestAPI_beacon_id_prefix_blob
daemon/: daemon.go
daemon/cmd/daemon/: main.go
daemon/config/: config.go
daemon/drkey/: BUILD.bazel  client_engine_fabrid.go
daemon/internal/servers/: BUILD.bazel  grpc.go  grpc_fabrid.go
doc/: BorderRouter.md  BorderRouter.rst
doc/command/scion/: scion_ping.rst
doc/cryptography/: drkey.rst
doc/dev/design/: FABRID.rst  index.rst
doc/protocols/: extension-header.rst
docker/: BUILD.bazel  endhost.bzl
docker/files/: endhost.sh
gen-fabrid/: 1-global_example.yml  55-local_example.yml
go/co/: main.go
go/co/reservation/test/eer/: BUILD.bazel  eer.go
go/co/reservationstorage/: BUILD.bazel  store.go
go/co/reservationstore/: manager.go  store.go
go/coligate/: BUILD.bazel  main.go
go/coligate/processing/: BUILD.bazel  control.go  control_test.go  export_test.go  forwarder.go  processing.go  processing_test.go  processor.go  processor_test.go
go/coligate/reservation/: BUILD.bazel  reservation_test.go  reservations.go
go/coligate/storage/: BUILD.bazel  storage.go  storage_test.go
go/coligate/tokenbucket/: BUILD.bazel  tokenbucket.go  tokenbucket_test.go
go/integration/: common.go
go/integration/coligate_integration/: BUILD.bazel  main.go
go/integration/coligate_performance/: BUILD.bazel  main.go
go/integration/end2end_integration/: main.go
go/lib/addr/: host.go
go/lib/topology/: interface.go  reload.go  servicetype.go  servicetype_test.go  topology.go
go/pkg/coligate/: BUILD.bazel  common.go  common_test.go  observability.go
go/pkg/coligate/config/: BUILD.bazel  coligate.go  config.go
go/pkg/coligate/grpc/: BUILD.bazel  coligate.go
go/pkg/proto/coligate/: BUILD.bazel  coligate.pb.go
go/pkg/proto/coligate/mock_coligate/: BUILD.bazel  mock.go
go/pkg/router/: dataplane_test.go
pkg/addr/: fmt.go
pkg/daemon/: BUILD.bazel  apitypes.go  daemon.go  grpc.go  grpc_fabrid.go
pkg/daemon/helper/: BUILD.bazel  protobuf.go
pkg/drkey/: BUILD.bazel  drkey.go  drkey_fabrid.go
pkg/experimental/fabrid/: BUILD.bazel  defs.go  fabrid_crypto.go  fabrid_crypto_test.go
pkg/experimental/fabrid/crypto/: BUILD.bazel  fabrid_crypto.go  fabrid_crypto_test.go
pkg/experimental/fabrid/graphutils/: BUILD.bazel  maps.go
pkg/grpc/: BUILD.bazel  dialer_drkey.go
pkg/proto/control_plane/: seg_extensions.pb.go
pkg/proto/daemon/: BUILD.bazel  daemon.pb.go  daemon_fabrid.pb.go
pkg/proto/drkey/: drkey.pb.go
pkg/regexp3/: BUILD.bazel  fastclock.go  match.go  regexp.go  replace.go  runner.go
pkg/regexp3/syntax/: BUILD.bazel
pkg/segment/: BUILD.bazel  extensions_test.go  unsigned.go  unsigned_test.go
pkg/segment/extensions/fabrid/: BUILD.bazel  fabrid.go  fabrid_test.go
pkg/slayers/: BUILD.bazel  extn.go  fabrid.go  fabrid_test.go
pkg/slayers/extension/: BUILD.bazel  fabrid.go  fabrid_crypto.go  fabrid_crypto_test.go  fabrid_test.go  identifier.go  identifier_test.go
pkg/snet/: BUILD.bazel  packet.go  path.go  path_fabrid.go  reply_pather.go
pkg/snet/path/: BUILD.bazel  empty.go  epic.go  fabrid.go  onehop.go  path_ext.go  scion.go
private/app/path/: BUILD.bazel  path.go
private/env/: env.go
private/path/combinator/: BUILD.bazel  graph.go  staticinfo_accumulator.go  staticinfo_accumulator_test.go
private/path/fabridquery/: BUILD.bazel  matchlist.go  matchlist_test.go  parser.go  query.go  query_test.go
private/path/pathpol/: BUILD.bazel  policy_test.go  sequence.go  sequence_test.go
private/storage/db/: BUILD.bazel  sqlite_mattn.go  sqlite_modernc.go
private/underlay/conn/: conn.go
proto/colibri/v1/: colibri.proto
proto/coligate/v1/: BUILD.bazel  (+1 more)
proto/control_plane/experimental/v1/: BUILD.bazel  fabrid.proto  fabrid_extensions.proto  seg_detached_extensions.proto  seg_detached_extensions_fabrid.proto
python/topology/: config.py  go.py  prometheus.py  supervisor.py  topo.py
router/: BUILD.bazel  connector.go  connector_fabrid.go  dataplane.go  dataplane_fabrid.go  dataplane_internal_fabrid_test.go  dataplane_internal_test.go  dataplane_test.go  export_test.go  metrics.go
router/config/: config.go
router/control/: BUILD.bazel  conf.go  drkey.go  fetcher.go
router/mock_router/: mock.go
scion/ping/: BUILD.bazel  ping.go  util.go
scion/showpaths/: showpaths.go
supervisor/: supervisord.conf
tools/: dc  topogen.py
tools/end2end/: BUILD.bazel  fabrid.go  main.go
tools/end2end_integration/: main.go
tools/fabrid/: BUILD.bazel  main.go
tools/integration/: BUILD.bazel  endhost_integration.go
tools/metrics_querier/: BUILD.bazel  README.md  main.go
tools/topology/: config.py  docker_utils.py  endhost.py  go.py  topo.py
tools/wireshark/: scion.lua
(+45 files in other folders)
