load("//tools/lint:go.bzl", "go_library")
load("//tools/lint:go_config.bzl", "go_lint_config")
load("@apple_rules_lint//lint:defs.bzl", "package_lint_config")

go_lint_config(
    name = "go_lint_config",
    exclude_filter = [
        "pathpolicyconstraints_parser.go",
    ],
    visibility = [
        "//visibility:public",
    ],
)

package_lint_config({
    "go": ":go_lint_config",
})

go_library(
    name = "go_default_library",
    srcs = [
        "pathpolicyconstraints_base_listener.go",
        "pathpolicyconstraints_lexer.go",
        "pathpolicyconstraints_listener.go",
        "pathpolicyconstraints_parser.go",
    ],
    importpath = "github.com/scionproto/scion/antlr/pathpolicyconstraints",
    visibility = ["//visibility:public"],
    deps = ["@com_github_antlr_antlr4_runtime_go_antlr//:go_default_library"],
)
