load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fabrid_manager.go"],
    importpath = "github.com/scionproto/scion/control/fabrid",
    visibility = ["//visibility:public"],
    deps = [
        "//control/config:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/segment/extensions/fabrid:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
