load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fabrid_manager.go",
        "mpls_map.go",
    ],
    importpath = "github.com/scionproto/scion/control/fabrid",
    visibility = ["//visibility:public"],
    deps = [
        "//control/config:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/segment/extensions/fabrid:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "fabrid_manager_test.go",
        "mpls_map_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//control/config:go_default_library",
        "//pkg/segment/extensions/fabrid:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
