load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_binary(
    name = "coligate",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/coligate",
    visibility = ["//visibility:private"],
    deps = [
        "//go/coligate/processing:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/topology:go_default_library",
        "//go/pkg/app:go_default_library",
        "//go/pkg/app/launcher:go_default_library",
        "//go/pkg/coligate/config:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
