load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "conf.go",
        "drkey.go",
        "fetcher.go",
        "iactx.go",
    ],
    importpath = "github.com/scionproto/scion/router/control",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/drkey:go_default_library",
        "//pkg/drkey/specific:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/common:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/control_plane:go_default_library",
        "//pkg/proto/control_plane/experimental:go_default_library",
        "//pkg/proto/drkey:go_default_library",
        "//private/keyconf:go_default_library",
        "//private/topology:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
        "@org_golang_x_crypto//pbkdf2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    data = glob(["testdata/**"]),
    deps = [
        ":go_default_library",
        "//private/topology:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
