load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fabrid_service.go",
        "fetcher.go",
    ],
    importpath = "github.com/scionproto/scion/control/fabrid/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//control/fabrid:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/grpc:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/control_plane/experimental:go_default_library",
        "//pkg/segment/extensions/fabrid:go_default_library",
        "//pkg/snet:go_default_library",
    ],
)
