load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fabrid_service.go",
        "fetcher.go",
    ],
    importpath = "github.com/scionproto/scion/control/fabrid/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//control/fabrid:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/grpc:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/control_plane/experimental:go_default_library",
        "//pkg/segment/extensions/fabrid:go_default_library",
        "//pkg/snet:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "fabrid_service_test.go",
        "fetcher_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//control/fabrid:go_default_library",
        "//control/fabrid/grpc/mock_grpc:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/private/xtest:go_default_library",
        "//pkg/proto/control_plane/experimental:go_default_library",
        "//pkg/segment/extensions/fabrid:go_default_library",
        "//pkg/snet:go_default_library",
        "//pkg/snet/mock_snet:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
