load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "forwarder.go",
        "processing.go",
        "processor.go",
    ],
    importpath = "github.com/scionproto/scion/go/coligate/processing",
    visibility = ["//visibility:public"],
    deps = [
        "//go/coligate/storage:go_default_library",
        "//go/coligate/tokenbucket:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/dataplane:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/metrics:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/topology:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/pkg/app:go_default_library",
        "//go/pkg/coligate:go_default_library",
        "//go/pkg/coligate/config:go_default_library",
        "//go/pkg/coligate/grpc:go_default_library",
        "//go/pkg/grpc:go_default_library",
        "//go/pkg/proto/colibri:go_default_library",
        "//go/pkg/proto/coligate:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//ipv4:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "export_test.go",
        "processing_test.go",
        "processor_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/coligate/storage:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/dataplane:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/slayers:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/pkg/coligate:go_default_library",
        "//go/pkg/coligate/config:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_x_net//ipv4:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
