load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["reservations.go"],
    importpath = "github.com/scionproto/scion/go/coligate/reservation",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["reservation_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
