load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["storage.go"],
    importpath = "github.com/scionproto/scion/go/coligate/storage",
    visibility = ["//visibility:public"],
    deps = ["//go/lib/log:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["storage_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
