load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["tokenbucket.go"],
    importpath = "github.com/scionproto/scion/go/coligate/tokenbucket",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["tokenbucket_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
