load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/integration/coligate_performance",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "coligate_performance",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
