load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/integration/coligate_performance",
    visibility = ["//visibility:private"],
    deps = [
        "//go/integration:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/daemon:go_default_library",
        "//go/lib/drkey/fetcher:go_default_library",
        "//go/lib/integration:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/sock/reliable:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/pkg/grpc:go_default_library",
        "@org_golang_google_grpc//resolver:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_binary(
    name = "coligate_performance",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
