load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/integration/coligate_performance",
    visibility = ["//visibility:private"],
    deps = [
        "//go/integration:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/slayers:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_binary(
    name = "coligate_performance",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
