load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["common.go"],
    importpath = "github.com/scionproto/scion/go/pkg/coligate",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["common_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
