load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "observability.go",
    ],
    importpath = "github.com/scionproto/scion/go/pkg/coligate",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/env:go_default_library",
        "//go/lib/metrics:go_default_library",
        "//go/lib/prom:go_default_library",
        "//go/lib/topology:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["common_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
