load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["protobuf.go"],
    importpath = "github.com/scionproto/scion/pkg/daemon/helper",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/drkey:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/control_plane:go_default_library",
        "//pkg/proto/drkey:go_default_library",
        "//pkg/scrypto/cppki:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)
