load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "matchlist.go",
        "parser.go",
        "query.go",
    ],
    importpath = "github.com/scionproto/scion/private/path/fabridquery",
    visibility = ["//visibility:public"],
    deps = [
        "//antlr/pathpolicyconstraints:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/experimental/fabrid:go_default_library",
        "//pkg/private/common:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/snet:go_default_library",
        "@com_github_antlr_antlr4_runtime_go_antlr//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "matchlist_test.go",
        "query_test.go",
    ],
    deps = [
        ":go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/experimental/fabrid:go_default_library",
        "//pkg/private/common:go_default_library",
        "//pkg/private/xtest:go_default_library",
        "//pkg/private/xtest/graph:go_default_library",
        "//pkg/snet:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
