load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "coligate.go",
        "config.go",
    ],
    importpath = "github.com/scionproto/scion/go/pkg/coligate/config",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/config:go_default_library",
        "//go/lib/env:go_default_library",
        "//go/lib/log:go_default_library",
    ],
)
