load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["coligate.go"],
    importpath = "github.com/scionproto/scion/go/pkg/coligate/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//go/coligate/storage:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/metrics:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/pkg/proto/coligate:go_default_library",
    ],
)
