load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["fabrid.go"],
    importpath = "github.com/scionproto/scion/pkg/segment/extensions/fabrid",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/control_plane/experimental:go_default_library",
        "//pkg/segment/extensions/digest:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["fabrid_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/proto/control_plane/experimental:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
