load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "experimental",
    srcs = [
        "fabrid.proto",
        "fabrid_extensions.proto",
        "seg_detached_extensions.proto",
        "seg_detached_extensions_fabrid.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/crypto/v1:crypto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)
