load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["eer.go"],
    importpath = "github.com/scionproto/scion/go/co/reservation/test/eer",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/e2e:go_default_library",
        "//go/co/reservation/test:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/lib/xtest:go_default_library",
    ],
)
